<resources>
    <string name="app_name">iAte</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="total_calories">Total calories</string>
    <string name="bmr">BMR</string>
    <string name="calorie_deficit">Calorie deficit</string>
    <string name="send">Send</string>
    <string name="describe_what_you_ate">Describe what you ate</string>
    <string name="unit_system">Unit System</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="activity_level">Activity Level</string>
    <string name="save_changes">Save Changes</string>
    <string name="estimated_weight_gained">Estimated weight gained</string>
    <string name="estimated_weight_lost">Estimated weight lost</string>
    <string name="height_cm">Height (cm)</string>
    <string name="height_in">Height (in)</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="weight_lb">Weight (lbs)</string>
    <string name="picture">Picture</string>
    <string name="failed_to_load_picture">Failed to load picture!</string>
    <string name="camera_permission_denied_please_give_your_permission_inside_settings">Camera permission denied. Please give your permission inside settings.</string>


    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="activity_levels">
        <item>Sedentary</item>
        <item>Light Exercise</item>
        <item>Moderate Exercise</item>
        <item>Active</item>
        <item>Very Active</item>
    </string-array>
</resources>