<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/summary_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/food_container">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_calories"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/total_calories"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/label_calories"
            app:layout_constraintStart_toStartOf="@id/label_calories"
            app:layout_constraintTop_toBottomOf="@id/label_calories"
            tools:text="2400" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_bmr"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text="@string/bmr"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bmr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/label_bmr"
            app:layout_constraintStart_toStartOf="@id/label_bmr"
            app:layout_constraintTop_toBottomOf="@id/label_bmr"
            tools:text="2400" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_calorie_deficit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/calorie_deficit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calories" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/calorie_deficit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/label_calorie_deficit"
            app:layout_constraintStart_toStartOf="@id/label_calorie_deficit"
            app:layout_constraintTop_toBottomOf="@id/label_calorie_deficit"
            tools:text="2517" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_weight_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calorie_deficit"
            tools:text="Estimated weight lost" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/weight_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_weight_change"
            tools:text="0.327 kg" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>